// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifExpertApp component tests should create GifExpertApp component 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="Homer"
    key="Homer"
  />
</div>
`;

exports[`GifExpertApp component tests should render GifGrid based on categories 1`] = `
<div>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="Dragon Ball"
    key="Dragon Ball"
  />
  <GifGrid
    category="One Punch"
    key="One Punch"
  />
</div>
`;
